chore: setup docker

--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,17 +1,26 @@
-# Use an official Java runtime as a parent image
-FROM openjdk:11-jdk-slim
+# Use an official Maven image to run Maven commands
+FROM maven:3.9.2-eclipse-temurin-17 as builder
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy the entire project into the container
+COPY . .
 
-# Build the application
-RUN ./mvnw clean package
+# Install project dependencies and build the project in development mode
+RUN mvn clean install -DskipTests
 
-# Expose the port the application will run on
-EXPOSE 8080
+# Now use a lightweight JDK image for runtime
+FROM eclipse-temurin:17-jdk-alpine
 
-# Run the application
-ENTRYPOINT ["java", "-jar", "target/user-service.jar"]
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy the built jar from the previous stage
+COPY --from=builder /app/target/user-service-0.0.1-SNAPSHOT.jar /app/user-service.jar
+
+# Set the entry point to run the Spring Boot application
+ENTRYPOINT ["java", "-jar", "/app/user-service.jar"]
+
+# Expose the application port (ensure this matches your application properties)
+EXPOSE 8081
