--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=user-service
 
-spring.datasource.url=jdbc:postgresql://user-db:5432/users_db
+# Datasource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/users_db
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#devtools setup
+# spring.devtools.restart.enabled=false
