chore:spring security authentication

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -13,3 +13,18 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #devtools setup
 # spring.devtools.restart.enabled=false
+
+# Actuator Settings
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.info.enabled=true
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.probes.enabled=true
+
+# Swagger Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Spring Security
+spring.security.user.name= tope
+spring.security.user.password = pa$$word
